@@ -5,6 +5,7 @@ Version 5.9.0 (XXX 2021)
  * Disable maintainer-mode in `configure.ac`.
  * Fix very rare crash/corruption introduced in v.5.8.1 #1142
  * English dict: fix problems with "just/only".
+ * English dict: work on hesitation markers.
 
 Version 5.8.1 (8 January 2021)
  * Fix macOS/SunOS build break.
